--- a/aula12-ex/ex014/modelo.html
+++ b/aula12-ex/ex014/modelo.html
@@ -7,16 +7,16 @@
   <link rel="stylesheet" href="estilo.css">
   <title>Modelo de Exercício</title>
 </head>
-<body>
+<body onload="carregar()">
   <header>
     <h1>Título</h1>
   </header>
   <section>
-    <div>
-      testando...
+    <div id = "msg">
+      Aqui vai aparecer a mensagem...
     </div>
-    <div>
-      testando...
+    <div id = "foto">
+      <img src="imagens/manha.png" alt="foto-manha">
     </div>
   </section>
   <footer>
