--- a/aula12-ex/ex014/modelo.html
+++ b/aula12-ex/ex014/modelo.html
@@ -7,16 +7,17 @@
   <link rel="stylesheet" href="estilo.css">
   <title>Modelo de Exercício</title>
 </head>
-<body onload="carregar()">
+<body onload="carregar()"> 
+<!--onload = quando carregar... 'quando a pagina carregar, executa a
+função "carrega()".' -->
   <header>
-    <h1>Título</h1>
+    <h1>Hora do Dia</h1>
   </header>
   <section>
     <div id = "msg">
-      Aqui vai aparecer a mensagem...
     </div>
     <div id = "foto">
-      <img src="imagens/manha.png" alt="foto-manha">
+      <img id="imagem" src="imagens/manha.png" alt="foto-manha">
     </div>
   </section>
   <footer>
