--- a/aula12-ex/ex015/modelo.html
+++ b/aula12-ex/ex015/modelo.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="estilo.css">
-  <title>Modelo de Exercício</title>
+  <title>Verificador de Idade</title>
 </head>
 <body>
   <header>
@@ -13,10 +13,23 @@
   </header>
   <section>
     <div>
-      testando...
+      <p>Ano de Nascimento:
+        <input type="number" name="txtano" id="txtano" min="0">
+      </p>
+
+      <p>Sexo:
+        <input type="radio" name="txtsex" id="mas" checked>
+        <label for="mas">Masculino</label>
+
+        <input type="radio" name="txtsex" id="fem">
+        <label for="fem">Feminino</label>
+      </p>
+      <p>
+        <input type="button" value="Verificar" onclick="verificar()">
+      </p>
     </div>
-    <div>
-      testando...
+    <div id="res">
+      Preencha os dados acima para ver o resultado!
     </div>
   </section>
   <footer>
