--- a/aula14-ex/ex016/modelo.html
+++ b/aula14-ex/ex016/modelo.html
@@ -12,15 +12,26 @@
     <h1>Vamos contar</h1>
   </header>
   <section>
+    
     <div>
-      <p>Início: <input type="number" name="inicio" id="nmb1"></p>
-      <p>Fim: <input type="number" name="fim" id="nmb2"></p>
-      <p>Passo: <input type="text"></p>
-      <p><input type="button" value="Contar" onclick="contar()"></p>
+      <p>
+        Início:<input type="number" name="inicio" id="nmb1">
+      </p>
+      <p>
+        Fim:   <input type="number" name="fim" id="nmb2">
+      </p>
+      <p>
+        Passo: <input type="number" name="passo" id="nmb3">
+      </p>
+      <p>       
+        <input type="button" value="Contar" onclick="contar()">
+      </p>
     </div>
+
     <div class="res">
       Preparando contagem...
     </div>
+
   </section>
   <footer>
     <p>&copy; Luiz Gabriel F. Martins</p>
