--- a/aula14-ex/ex016/modelo.html
+++ b/aula14-ex/ex016/modelo.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="estilo.css">
-  <title>Modelo de Exercício</title>
+  <title>Super Contator</title>
 </head>
 <body>
   <header>
@@ -15,10 +15,10 @@
     
     <div>
       <p>
-        Início:<input type="number" name="inicio" id="nmb1">
+        Início: <input type="number" name="inicio" id="nmb1">
       </p>
       <p>
-        Fim:   <input type="number" name="fim" id="nmb2">
+        Fim: <input type="number" name="fim" id="nmb2">
       </p>
       <p>
         Passo: <input type="number" name="passo" id="nmb3">
