--- a/aula06/ex004-2.html
+++ b/aula06/ex004-2.html
@@ -14,10 +14,8 @@
 <body>
   
   <script>
-    var nome = window.prompt('Qual é o seu nome?');
-    document.write(`Seu nome <strong>${nome}</strong> tem ${nome.length} letras <br/>`);
-    document.write(`Seu nome em maiúsculo é ${nome.toUpperCase()} <br/>`);
-    document.write(`Seu nome em minúsculo é ${nome.toLowerCase()} <br/>`);
+    var numero = parseFloat(window.prompt('Escreva um número com decimais:'));
+    document.write(`O numero sem casas decimais é igual a ${parseInt(numero)}`);
   </script>
 </body>
 </html>
